Updated Pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,7 @@
 						<configuration>
 							<suiteXmlFiles>
 								<suiteXmlFile>testng.xml</suiteXmlFile>
+								<suiteXmlFile>ReportsConfig.xml</suiteXmlFile>
 							</suiteXmlFiles>
 						</configuration>
 					</plugin>
